lucene 6.0.0 (query tests fail)